[FIX][DD-784] put background lines behind UI content

--- a/yo/app/styles/dswarm.css
+++ b/yo/app/styles/dswarm.css
@@ -30,6 +30,7 @@ body {
 	background:url(../images/dswarm_bglines.svg) no-repeat 0 0;
 	opacity:.3;
 	background-size:1120px 888px;
+    z-index: -10;
 }
 
 
